fp-macros/tests/ui/duplicate_document_parameters.stderr
error: Validation error: #[document_parameters] can only be used once per item. Remove the duplicate attribute
 --> tests/ui/duplicate_document_parameters.rs:5:1
  |
5 | #[document_parameters("The value")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `document_parameters` (in Nightly builds, run with -Z macro-backtrace for more info)
